--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: yourmail@gmail.com</p>
+  <p>Email: derickraju20@gmail.com</p>
   <p>LinkedIn: linkedin.com/in/yourname</p>
 </section>
 
